--- a/app/src/main/res/layout/activity_recipe_list_activity.xml
+++ b/app/src/main/res/layout/activity_recipe_list_activity.xml
@@ -10,8 +10,8 @@
         android:id="@+id/activity_recipe_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chose recipe"
-        android:textSize="32dp"
+        android:text="@string/chose_recipe_text"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/recipes_list_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
