--- a/app/src/main/res/layout-land/activity_recipe.xml
+++ b/app/src/main/res/layout-land/activity_recipe.xml
@@ -10,28 +10,31 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/recipe_name_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/recipe_name_text_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cookie" />
 
     <TextView
         android:id="@+id/recipe_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="text"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/components_text_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/components_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="text"
         app:layout_constraintBottom_toTopOf="@+id/send_recipe_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/recipe_name_text_view" />
 
     <Button
@@ -41,6 +44,7 @@
         android:text="@string/send_btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/components_text_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
