--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/main_activity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chose category"
-        android:textSize="32dp"
+        android:text="@string/chose_category_text"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/category_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
