--- a/app/src/main/res/layout-land/activity_recipe.xml
+++ b/app/src/main/res/layout-land/activity_recipe.xml
@@ -8,12 +8,15 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="478dp"
+        android:layout_height="252dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/recipe_name_text_view"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.48000002"
         app:srcCompat="@drawable/cookie" />
 
     <TextView
